# video_search_service

./: .gitignore  README.md
auth/: .env.example  .env.prod.example  Dockerfile  README.md  pyproject.toml
auth/migrations/versions/: 5626d7652d06_users_add_email.py
auth/src/: main.py
auth/src/auth/: dependencies.py  schemas.py
auth/src/auth/api/v1/: router.py
auth/src/auth/jwt/: backend.py  service.py
auth/src/cli/: main.py  superuser.py
auth/src/settings/: logging.py
auth/src/social/: services.py
auth/src/social/api/v1/: router.py
auth/src/users/: models.py  repositories.py  schemas.py  service.py
auth/src/users/api/v1/: router.py
auth/tests/functional/src/auth/: test_auth.py  test_protected_endpoint.py
auth/tests/functional/src/permissions/: test_api.py
auth/tests/functional/src/users/: test_api.py  test_repos.py
cdn_api/: .env.example  .env.prod.example  Dockerfile  README.md  pyproject.toml
cdn_api/cdn_api/: main.py
cdn_api/cdn_api/api/v1/: files.py  task.py  video.py
cdn_api/cdn_api/configs/: minio.py  postgres.py  rabbitmq.py  redis.py  settings.py
cdn_api/cdn_api/exceptions/: __init__.py  common.py
cdn_api/cdn_api/message_queue/: message_queue.py
cdn_api/cdn_api/models/: __init__.py  common.py  edge_nodes.py  files.py  task.py  video.py
cdn_api/cdn_api/repositories/: files_info.py  s3.py  tasks.py  video_meta.py  zip.py
cdn_api/cdn_api/schemas/: edge_nodes.py  file_info_repo.py  jwt.py  requests.py  responses.py
cdn_api/cdn_api/services/: files.py  task.py  video.py
cdn_api/cdn_api/uow/: files.py  video.py
cdn_api/cdn_api/utils/: authorization.py  dependencies.py  user_roles.py  utils.py
cdn_api/tests/functional/: conftest.py
cdn_api/tests/functional/api/: test_video.py
cdn_worker/: .env.example  README.md  pyproject.toml
cdn_worker/cdn_worker/repositories/: edge_nodes.py
cdn_worker/cdn_worker/schemas/: edge_nodes.py
cdn_worker/cdn_worker/settings/: app.py  base.py  database.py  logging.py  service.py
doc/: sequnce.md
docker/: .env.prod.example  dev.yaml  elk.yaml  prod.yaml
docker/configs/nginx/: nginx.conf  site.conf
file_listener/: pyproject.toml
file_listener/file_listener/: main.py
file_listener/file_listener/listener/: folder_listener.py
nginx_streaming/: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  nginx.conf
nginx_streaming/frontend/: index.html  package.json
nginx_streaming/tmp/hls/: 720_video0.ts  720_video1.ts  fb9a542f-7103-4cd5-8192-2e86bc1802f9.m3u8  fb9a542f-7103-4cd5-8192-2e86bc1802f90.ts  fb9a542f-7103-4cd5-8192-2e86bc1802f91.ts
nginx_streaming/tmp/hls/tv/: 720_video.m3u8
scripts/: prod.sh
stream_api/: .env.example  .env.prod.example  Dockerfile  README.md  pyproject.toml
stream_api/stream_api/: main.py
stream_api/stream_api/api/v1/: manifest.py
stream_api/stream_api/core/: exceptions.py
stream_api/stream_api/dependencies/: auth.py  databases.py  requests.py  s3.py
stream_api/stream_api/integrations/common/: api_client.py  exceptions.py
stream_api/stream_api/integrations/schemas/: auth.py
stream_api/stream_api/integrations/services/: auth.py  exceptions.py
stream_api/stream_api/repositories/: __init__.py  exceptions.py  s3.py  video_meta.py
stream_api/stream_api/schemas/: __init__.py  video_meta.py
stream_api/stream_api/services/: exceptions.py  manifest.py
stream_api/stream_api/settings/: app.py  base.py  integration.py  logging.py  minio.py  postgres.py  service.py
stream_api/stream_api/utils/: files.py
stream_api/tests/functional/: conftest.py  utils.py
stream_api/tests/functional/repositories/: test_video_meta.py
video_converter/: .env.example  .env.prod.example  Dockerfile  README.md  pyproject.toml
video_converter/tests/functional/: conftest.py
video_converter/tests/functional/api/: test_video.py
video_converter/video_converter/: main.py
video_converter/video_converter/api/v1/: router.py
video_converter/video_converter/configs/: minio.py  postgres.py  settings.py
video_converter/video_converter/exceptions/: __init__.py  common.py
video_converter/video_converter/models/: __init__.py  common.py  task.py  video.py
video_converter/video_converter/repositories/: s3.py  tasks.py  video_meta.py
video_converter/video_converter/schemas/: input.py  task.py  video.py
video_converter/video_converter/services/: video.py
video_converter/video_converter/uow/: video.py
video_converter/video_converter/utils/: converter.py
