[tool.poetry]
name = "cdn-api"
version = "0.1.0"
description = ""
authors = ["nikita zigman <zigman.nikita@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
fastapi-pagination = "^0.12.11"
fastapi-limiter = "^0.1.5"
redis = "^4.6.0"
asyncpg = "^0.28.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.22"}
fastapi-filter = "^1.0.0"
orjson = "^3.9.10"
asgiref = "^3.7.2"
miniopy-async = "^1.17"
aio-pika = "^9.3.1"


[tool.poetry.group.dev.dependencies]
types-redis = "^4.6.0.11"
types-python-jose = "^3.3.4.8"
httpx = "^0.25.2"
pytest-asyncio = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = "True"
strict_optional = "True"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
exclude = [".git", "docs", "build", "dist", "venv"]
line-length = 79
target-version = "py312"
fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade,
    "I",  # isort
]

[tool.ruff.isort]
lines-after-imports = 2
lines-between-types = 1
section-order = [
    "future",
    "standard-library",
    "first-party",
    "local-folder",
    "third-party",
]
